updated homeDir in script

--- a/run_once_install_dev_tools.sh.tmpl
+++ b/run_once_install_dev_tools.sh.tmpl
@@ -7,7 +7,7 @@ echo "🔧 Starting dev environment setup..."
 # Determine OS and home directory
 # -------------------------------
 OS="{{ .chezmoi.os }}"
-HOME_DIR="{{ .chezmoi.home }}"
+HOME_DIR="{{ .chezmoi.homeDir }}"
 USER_NAME=$(whoami)
 
 echo "OS detected: $OS"
