updated efm-langserver download page

--- a/run_once_install_dev_tools.sh.tmpl
+++ b/run_once_install_dev_tools.sh.tmpl
@@ -218,7 +218,7 @@ if [[ "$OS" == "linux" ]]; then
     install_bin "https://github.com/errata-ai/vale/releases/download/v2.28.1/vale_linux_amd64" "vale"
     install_bin "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp" "yt-dlp"
     install_bin "https://github.com/ajeetdsouza/zoxide/releases/download/v0.9.0/zoxide-x86_64-unknown-linux-gnu" "zoxide"
-    install_bin "https://github.com/mattn/efm-langserver/releases/download/v0.0.48/efm-langserver_linux_amd64.tar.gz" "efm-langserver"
+    install_bin "https://github.com/mattn/efm-langserver/releases/download/v0.0.54/efm-langserver_v0.0.54_linux_amd64.tar.gz" "efm-langserver"
     install_bin "https://github.com/superfly/flyctl/releases/latest/download/flyctl_linux_amd64.tar.gz" "flyctl"
     install_bin "https://github.com/artempyanykh/marksman/releases/download/v2023-12-23/marksman-linux-x64" "marksman"
     install_bin "https://github.com/mongodb/mongosh/releases/latest/download/mongosh-linux-x64.tgz" "mongosh"
