updated download url

--- a/run_once_install_dev_tools.sh.tmpl
+++ b/run_once_install_dev_tools.sh.tmpl
@@ -219,7 +219,7 @@ if [[ "$OS" == "linux" ]]; then
     install_bin "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp" "yt-dlp"
     install_bin "https://github.com/ajeetdsouza/zoxide/releases/download/v0.9.0/zoxide-x86_64-unknown-linux-gnu" "zoxide"
     install_bin "https://github.com/mattn/efm-langserver/releases/download/v0.0.54/efm-langserver_v0.0.54_linux_amd64.tar.gz" "efm-langserver"
-    install_bin "https://github.com/superfly/flyctl/releases/latest/download/flyctl_linux_amd64.tar.gz" "flyctl"
+    install_bin "https://github.com/superfly/flyctl/releases/download/v0.3.195/flyctl_0.3.195_Linux_x86_64.tar.gz" "flyctl"
     install_bin "https://github.com/artempyanykh/marksman/releases/download/v2023-12-23/marksman-linux-x64" "marksman"
     install_bin "https://github.com/mongodb/mongosh/releases/latest/download/mongosh-linux-x64.tgz" "mongosh"
     install_bin "https://github.com/jgm/pandoc/releases/latest/download/pandoc-3.1.11.1-linux-amd64.tar.gz" "pandoc"
